# pico16470

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  out.uf2  pico16470.dis  pico16470.elf  pico16470.elf.map  pico16470.hex  pico16470.uf2
.ccls-cache/@@home@henry@code@pico16470/: @home@henry@code@pico-sdk@src@boards@include@boards@pico.h.blob  @home@henry@code@pico-sdk@src@common@pico_base@include@pico.h.blob  @home@henry@code@pico-sdk@src@common@pico_base@include@pico@assert.h.blob  @home@henry@code@pico-sdk@src@common@pico_base@include@pico@config.h.blob  @home@henry@code@pico-sdk@src@common@pico_base@include@pico@error.h.blob  @home@henry@code@pico-sdk@src@common@pico_base@include@pico@types.h.blob  @home@henry@code@pico-sdk@src@common@pico_binary_info@include@pico@binary_info.h.blob  @home@henry@code@pico-sdk@src@common@pico_binary_info@include@pico@binary_info@code.h.blob  @home@henry@code@pico-sdk@src@common@pico_binary_info@include@pico@binary_info@defs.h.blob  @home@henry@code@pico-sdk@src@common@pico_binary_info@include@pico@binary_info@structure.h.blob  @home@henry@code@pico-sdk@src@common@pico_stdlib@include@pico@stdlib.h.blob  @home@henry@code@pico-sdk@src@common@pico_sync@critical_section.c.blob  (+143 more)
elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
include/: buffer.h  data_capture.h  imu.h  isr.h  main.h  reg.h  script.h  timer.h  usb.h
pico-sdk/: Makefile  cmake_install.cmake
src/: buffer.c  data_capture.c  imu.c  isr.c  main.c  reg.c  script.c  timer.c  usb.c
(+149 files in other folders)
